...
            "state" : "translated",
            "value" : "Mostrar las instrucciones iniciales para jugar el juego."
          }
        }
      }
    },
    "Start Game" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start Game"
          }
...
            "state" : "translated",
            "value" : "Tiempo por juego"
          }
        }
      }
    },
    "Time per Round" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Time per Round"
          }
...
